<resources>
    <string name="app_name">TravelApplication</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="startJourney">Start Journey</string>
    <string name="planYourTrips">Plan your trips</string>
    <string name="findBestDeals">Find best deals</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="capetown">Cape Towm</string>
    <string name="myTrips">My Trips</string>
    <string name="explore">Explore</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="bookNow">Book Now</string>
    <string name="tajMahal">Taj Mahal</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>
    <string name="startDateNo">18-Aug-2022</string>
    <string name="endDateNo">25-Aug-2022</string>
    <string name="burjaLarab">Burj al arab</string>
    <string name="capetownDescription">of Cape Town terrain, all captured in one photo. ⠀ -⠀ Lat/Lon South Africa ...</string>
    <string name="searchTheDestination">Search for your destination</string>
    <string name="theColosseumTemple">The Colosseum Temple</string>
    <string name="theGreatWallChina">The Great Wall of China</string>
    <string name="popularDestination">Popular Destination</string>
    <string name="createAccount">Create Account</string>
    <string name="enterId">Enter ID</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="sort">Sort</string>
    <string name="rent">Rent</string>
    <string name="maldives">Maldives</string>
    <string name="watchExplore">Watch &amp; Explore</string>
    <string name="mobileNo">Mobile No</string>
    <string name="goa">Goa</string>
    <string name="map">Map</string>
    <string name="ladakh">Ladakh</string>
    <string name="singapore">Singapore</string>
    <string name="disneyland">Disneyland</string>
    <string name="gladdenIsland">Gladden Island</string>
    <string name="edStaffordAmazon">Ed Stafford Amazon</string>
    <string name="mountEverest">Mount Everest</string>
    <string name="newStoriesByTravellers">New Stories By Travellers</string>
    <string name="travellersStories">Travellers Stories</string>
    <string name="date">28 june 2020 || 04 july 2020</string>
    <string name="seeAllInspiringIdeas">SEE ALL INSPIRING IDEAS</string>
    <string name="storiesByTravellers">Stories By Travellers</string>
    <string name="enterYourDetail">Enter your details</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="enterIdPassword">Enter ID / Password</string>
    <string name="price">49000/-</string>
    <string name="upcoming">UPCOMING</string>
    <string name="completed">COMPLETED</string>
    <string name="cancelled">CANCELLED</string>
    <string name="unsuccessful">UNSUCCESSFUL</string>
    <string name="thailand">Thailand</string>
    <string name="switzerland">Switzerland</string>
    <string name="weekend">Weekend</string>
    <string name="Romantic">Romantic</string>
    <string name="mountain">Mountain</string>
    <string name="discoverByInterest">Discover by Interest</string>
    <string name="beach">Beach</string>
    <string name="shubham">Shubham</string>
    <string name="honeymoon">Honeymoon</string>
    <string name="international">International</string>
    <string name="tokyo">Tokyo</string>
    <string name="london">London</string>
    <string name="lonavala">Lonavala</string>
    <string name="clockTower">Clock Tower</string>
    <string name="abdulaWart">Abdula Wart</string>
    <string name="efiltower">Efil Tower</string>
    <string name="ifYouHaveSignup">If you have already Signup?</string>
    <string name="ifLoginFirstTime">If you login for first time?</string>
    <string name="planTripSentence">I long ago accepted the reality that the Internet provides an unprecedented source for travel planning.</string>
    <string name="enjoyJourney">Enjoy your travelling journey with mountain travel</string>
</resources>