<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/loutFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/facebook_btn"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:src="@drawable/facebook" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loutTwitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/twitter_btn"
                android:gravity="center">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginVertical="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:src="@drawable/twitter" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/twitter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/enterYourDetail" />

        <EditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/button_back1"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/firstname"
            android:inputType="text" />

        <EditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/button_back1"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/lastname"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/button_back1"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/mobileNo"
            android:inputType="number" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:background="@drawable/button_back1"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/button_back1"
            android:elevation="@dimen/_10sdp"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/button_back"
            android:elevation="@dimen/_10sdp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ifYouHaveSignup"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>