<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlanTripScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:src="@drawable/deal_vector"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:paddingVertical="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findBestDeals"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_30sdp"
            android:layout_gravity="center"
            android:text="@string/planTripSentence"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/button_back1"
            android:elevation="@dimen/_10sdp"
            android:text="@string/createAccount"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

</LinearLayout>